bg icon z-index fix

--- a/src/styles/icons.less
+++ b/src/styles/icons.less
@@ -127,14 +127,14 @@
   }
 }
 
+// BACKGROUND ICONS
+
 [class^='isiconbg-'],
 [class*=' isiconbg-'] {
   position: relative; // required for the pseudo-element's position to function
-  z-index: auto;
+  z-index: 1;
   &:before {
-    // don't forget to set the background for this pseudo-element, too. typically this is a flat colour, but it'll work with any valid background (gradients, images, etc).
-    // this defaults to currentColor, so that it's clear that it's actually working when it's used
-    background-color: currentColor;
+    background-color: var(--ironsworn-color-bg-highlight);
     content: '';
     mask-repeat: no-repeat;
     mask-position: center;
@@ -144,9 +144,9 @@
     width: 100%;
     top: 0;
     left: 0;
-    z-index: var(--ironsworn-z-index-low);
     position: absolute;
     box-sizing: border-box;
+    z-index: var(--ironsworn-z-index-low);
     mask-origin: content-box; // this + above make this sensitive to padding on the :before pseudo-element.
   }
 }
